all button blinking and buttons stop shifting

--- a/public/style.css
+++ b/public/style.css
@@ -48,7 +48,7 @@ header > * {
 	justify-content: center;
 	font-family: "Quantico", sans-serif;
 }
-.filter > button,
+.filter button,
 li {
 	list-style-type: none;
 	display: inline;
@@ -56,7 +56,6 @@ li {
 	color: rgb(44, 44, 44);
 	padding: 0.25em;
 	border-radius: 0.5em;
-	background-color: grey;
 	cursor: pointer;
 }
 
@@ -71,7 +70,7 @@ li:nth-child(1) {
 }
 .project {
 	margin-bottom: 2%;
-	flex-basis: 43%;
+	flex-basis: 45vw;
 	font-family: "Bungee Hairline", cursive;
 	line-height: 120%;
 }
@@ -82,13 +81,6 @@ li:nth-child(1) {
 }
 
 /* filter buttons */
-
-.selected {
-	background: linear-gradient(#313c62, #434e74);
-	box-shadow: inset 0 0 #3d3361, inset 0 2px 9px 1px #23314b;
-	color: #000000;
-	text-shadow: 0 1px #1b2839;
-}
 .unselected {
 	background: linear-gradient(#7ba4ca, #5886ab);
 	border: 1px solid #344a7a;
@@ -97,6 +89,7 @@ li:nth-child(1) {
 	box-shadow: inset 0 1px 1px 0 #a1a5dd, 0 2px 0 -1px rgba(0, 0, 0, 0.2);
 	cursor: pointer;
 }
+
 .unselected:hover {
 	background: linear-gradient(#655ea8, #49508e);
 	border: 1px solid #484186;
@@ -109,6 +102,33 @@ li:nth-child(1) {
 	box-shadow: inset 0 0 #3d3361, inset 0 2px 9px 1px #23244b;
 	color: #000000;
 	text-shadow: 0 1px #1b2039;
+}
+/* blinking all button */
+@-webkit-keyframes blackWhite {
+	0% {
+		background-color: #313c62;
+	}
+	50% {
+		background-color: #7ba4ca;
+	}
+	100% {
+		background-color: #313c62;
+	}
+}
+.all {
+	background: black;
+	-webkit-animation-name: blackWhite;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-duration: 3s;
+	-webkit-animation-timing-function: ease;
+}
+.selected {
+	border: 1px solid #344a7a;
+
+	background: linear-gradient(#313c62, #434e74);
+	box-shadow: inset 0 0 #3d3361, inset 0 2px 9px 1px #23314b;
+	color: #000000;
+	text-shadow: 0 1px #1b2839;
 }
 
 /* preview fade-in/out */
